# file-indexer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  package.sh
src/: cli_interface.cpp  cli_interface.h  file_indexer.cpp  file_indexer.h  main.cpp
